[package]
name = "minibus"
version = "0.1.0"
authors = ["CodeHz <codehz@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
async-std = { version = "1.6", features = ["attributes", "unstable"] }
async-trait = "0.1.36"
rand = "0.7.3"
weak-table = "0.3.0"
log = "0.4.11"
pretty_env_logger = "0.4.0"
inventory = "0.1.8"
