[package]
name = "minibus"
version = "0.0.2"
description = "A minimal message bus server"
license = "AGPL-3.0-or-later"
authors = ["CodeHz <codehz@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
async-std = { version = "1.6", features = ["attributes", "unstable"] }
async-trait = "0.1.36"
rand = "0.7.3"
weak-table = "0.3.0"
log = "0.4.11"
pretty_env_logger = "0.4.0"
inventory = "0.1.8"
structopt = "0.3"
tide = "0.13"
base64 = "0.12"
multimap = "0.8.1"
